fixed scrollbar detection combine same functions for link and folder into one object

--- a/app/webroot/css/main.less
+++ b/app/webroot/css/main.less
@@ -122,7 +122,7 @@ h1.links-left{
 #grid{
   width:100%;
   height:100%;
-  display:block;
+  display:none;
   position:absolute;
   li{
     display: block;
